# allBlue-Backend

./: .env.local  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
Templates/: index.html
allblue_backend/: asgi.py  settings.py  urls.py  wsgi.py
rooms/: consumer.py  consumers.py  routers.py  routings.py  urls.py  views.py
users/: admin.py  firebasemiddleware.py  forms.py  managers.py  models.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_managers.py  0004_alter_user_username.py  0005_alter_user_email.py
